Adding MultiModule Maven project