@@ -10,6 +10,10 @@
 
 	<properties>
 		<junit.version>5.3.2</junit.version>
+		<skip.unit.tests>false</skip.unit.tests>
+		<!--<surefireArgLine></surefireArgLine>
+		<failsafeArgLine></failsafeArgLine> -->
+		<skip.integration.tests>false</skip.integration.tests>
 	</properties>
 
 	<pluginRepositories>
@@ -56,9 +60,14 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M2</version>
 				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
+					<!-- Sets the VM argument line used when unit tests are run. -->
+					<argLine>${surefireArgLine}</argLine>
+					<!-- Skips unit tests if the value of skip.unit.tests property is true -->
+					<skipTests>${skip.unit.tests}</skipTests>
+					<!-- Excludes integration tests when unit tests are run. -->
+					<excludes>
+						<exclude>**/IT*.java</exclude>
+					</excludes>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -66,11 +75,25 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>3.0.0-M2</version>
 				<executions>
+					<!--
+                        Ensures that both integration-test and verify goals of the Failsafe Maven
+                        plugin are executed.
+                    -->
 					<execution>
+						<id>integration-tests</id>
 						<goals>
 							<goal>integration-test</goal>
 							<goal>verify</goal>
 						</goals>
+						<configuration>
+							<!-- Sets the VM argument line used when integration tests are run. -->
+							<argLine>${failsafeArgLine}</argLine>
+							<!--
+                                Skips integration tests if the value of skip.integration.tests property
+                                is true
+                            -->
+							<skipTests>${skip.integration.tests}</skipTests>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -82,7 +105,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.5.201505241946</version>
+				<version>0.8.2</version>
 				<executions>
 					<!--
                         Prepares the property pointing to the JaCoCo runtime agent which
@@ -121,6 +144,18 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>3.1.9</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs</artifactId>
+						<version>3.1.9</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
@@ -169,6 +204,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.22.1</version>
+			</plugin>
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>3.1.9</version>
 			</plugin>
 		</plugins>
 	</reporting>
